--- a/sc-decisions-digraph/.eslintrc.json
+++ b/sc-decisions-digraph/.eslintrc.json
@@ -23,5 +23,8 @@
         "no-unused-vars": "warn",
         "constructor-super": "warn",
         "valid-typeof": "warn"
+    },
+    "globals": {
+        "ko": true
     }
 }
