--- a/sc-decisions-digraph/.vscode/tasks.json
+++ b/sc-decisions-digraph/.vscode/tasks.json
@@ -2,8 +2,13 @@
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
     "version": "0.1.0",
-    "command": "node",
-    "isShellCommand": true,
-    "args": ["index.js"],
-    "showOutput": "always"
+    "tasks": [
+        {
+            "taskName": "build babel",
+            "command": "npm",
+            "args": ["run", "build"],
+            "isShellCommand": true,
+            "showOutput": "always"
+        }
+    ]
 }
