--- a/sc-decisions-digraph/package.json
+++ b/sc-decisions-digraph/package.json
@@ -4,8 +4,16 @@
   "description": "Поиски структуры данных для калькулятора решений КБ",
   "main": "index.js",
   "scripts": {
+    "build": "babel src -w -d lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Daniyal Guliev",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "knockout": "^3.4.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-preset-env": "^1.2.1"
+  }
 }
