--- a/sc-decisions-digraph/package.json
+++ b/sc-decisions-digraph/package.json
@@ -4,7 +4,7 @@
   "description": "Поиски структуры данных для калькулятора решений КБ",
   "main": "index.js",
   "scripts": {
-    "build": "babel src -w -d lib",
+    "build": "babel src -d lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Daniyal Guliev",
