--- a/sc-decisions-digraph/.vscode/tasks.json
+++ b/sc-decisions-digraph/.vscode/tasks.json
@@ -9,6 +9,13 @@
             "args": ["run", "build"],
             "isShellCommand": true,
             "showOutput": "always"
+        },
+        {
+            "taskName": "gulp",
+            "command": "gulp",
+            "args": ["--color"],
+            "isShellCommand": true,
+            "showOutput": "always"
         }
     ]
 }
