--- a/sc-decisions-digraph/package.json
+++ b/sc-decisions-digraph/package.json
@@ -20,6 +20,13 @@
     "babel-preset-env": "^1.2.1",
     "babelify": "^7.3.0",
     "browserify": "^14.1.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.4.1",
+    "gulp-uglify": "^2.1.2",
+    "rimraf": "^2.6.1",
     "watchify": "^3.9.0"
   }
 }
