--- a/sc-decisions-digraph/package.json
+++ b/sc-decisions-digraph/package.json
@@ -19,16 +19,20 @@
     "babel-cli": "^6.23.0",
     "babel-preset-env": "^1.2.1",
     "babelify": "^7.3.0",
+    "browser-sync": "^2.18.8",
     "browserify": "^14.1.0",
     "browserify-shim": "^3.8.14",
+    "exorcist": "^0.4.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^2.4.1",
-    "gulp-uglify": "^2.1.2",
+    "gulp-util": "^3.0.8",
     "rimraf": "^2.6.1",
+    "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0"
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
   },
   "browserify-shim": {
     "knockout": "global:ko"
