--- a/javascript/lerna-playground/.vscode/settings.json
+++ b/javascript/lerna-playground/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.exclude": {
         "**/node_modules": true
-    }
+    },
+    "typescript.validate.enable": false,
+    "javascript.validate.enable": true
 }
